force-app/main/default/objects/Employee__c/fields/Customer_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Score__c</fullName>
    <label>Customer Satisfaction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>