force-app/main/default/objects/Employee__c/fields/Employee_Tardiness__c.field-meta.xml
<CustomField>
    <fullName>Employee_Tardiness__c</fullName>
    <label>Employee Tardiness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>