force-app/main/default/objects/Employee__c/fields/Lead_Conversation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversation_Rate__c</fullName>
    <label>Lead Conversation Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>