force-app/main/default/objects/Employee__c/fields/Performance_Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Review_Rating__c</fullName>
    <label>Performance Review Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Meets Expectations</fullName>
            </value>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>