force-app/main/default/objects/Employee__c/fields/Regional_Sales_Growth__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Growth__c</fullName>
    <label>Regional Sales Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>