force-app/main/default/objects/Employee__c/fields/Sales_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Achieved__c</fullName>
    <label>Sales Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>