force-app/main/default/objects/Employee__c/fields/Sales_Rank__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rank__c</fullName>
    <label>Sales Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top 10%</fullName>
            </value>
            <value>
                <fullName>Top 25%</fullName>
            </value>
            <value>
                <fullName>Top 50%</fullName>
            </value>
            <value>
                <fullName>Below 50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>