force-app/main/default/objects/Employee__c/fields/Sales_Strategy_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Strategy_Implementation__c</fullName>
    <label>Sales Strategy Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind</fullName>
            </value>
            <value>
                <fullName>OnTrack</fullName>
            </value>
            <value>
                <fullName>AHead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>