force-app/main/default/objects/Employee__c/fields/Sales_target__c.field-meta.xml
<CustomField>
    <fullName>Sales_target__c</fullName>
    <label>Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>