force-app/main/default/objects/Employee__c/fields/Sales_Trainiing_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Trainiing_Status__c</fullName>
    <label>Sales Trainiing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>