force-app/main/default/objects/Employee__c/fields/Sales_Training_Score__c.field-meta.xml
<CustomField>
    <fullName>Sales_Training_Score__c</fullName>
    <label>Sales Training Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>