force-app/main/default/objects/Employee__c/fields/Store_Sales_Performance__c.field-meta.xml
<CustomField>
    <fullName>Store_Sales_Performance__c</fullName>
    <label>Store Sales Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Above Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>