force-app/main/default/objects/Employee__c/fields/Team_Sales_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Team_Sales_Achievement__c</fullName>
    <label>Team Sales Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>