force-app/main/default/objects/Employee__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Zone</fullName>
            </value>
            <value>
                <fullName>South Zone</fullName>
            </value>
            <value>
                <fullName>East Zone</fullName>
            </value>
            <value>
                <fullName>West Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>