force-app/main/default/objects/Employee__c/fields/Unauthorized_Absence__c.field-meta.xml
<CustomField>
    <fullName>Unauthorized_Absence__c</fullName>
    <label>Unauthorized Absence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>