force-app/main/default/objects/Employee__c/fields/Upsell_Cross_sell_success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Cross_sell_success_Rate__c</fullName>
    <label>Upsell Cross sell success Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>