force-app/main/default/objects/Employee__c/fields/Zonal_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Zonal_Market_Share__c</fullName>
    <label>Zonal Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>