force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>Hire_Date__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Role__c</columns>
    <columns>Sales_Achieved__c</columns>
    <columns>Sales_Rank__c</columns>
    <columns>Sales_Trainiing_Status__c</columns>
    <columns>Territory__c</columns>
    <columns>Store__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>